--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [CONFIG]
 ;folder with alternative sprites
-inputfolder = D:\dnwilco\colormapping\input
+inputfolder =
 ;folder that has the original sprites from the repo
-originalfolder = D:\dnwilco\pokerogue\public\images\pokemon
+originalfolder =
