--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [CONFIG]
 ;folder with alternative sprites
-inputfolder =
+inputfolder = input
 ;folder that has the original sprites from the repo
-originalfolder =
+originalfolder = ../pokerogue/public/images/pokemon
